--- a/localized_pages/German/main.css
+++ b/localized_pages/German/main.css
@@ -45,12 +45,16 @@ td.video-fields{
 }
 td.info-fields{
     width: 400px;
+    padding-left: 10px;
+    text-align: left;
 }
 .extra-info{
     display: none;
     line-height: 30px;
     font-size: 12px;
+    text-align: left;
 }
+/* Hover function for the info-button, if your Pointer is over the button, the text will appear */
 .info-button:hover {
     background-color: white;
     padding: 0 0 0 5px;
@@ -60,6 +64,7 @@ td.info-fields{
 .info-button:hover .extra-info{
     display: block;
 }
+/* transition Time for CSS elements*/
 *{
     transition: .4s;
 }
