Changed folder names and created walkable page

--- a/templates/index.html
+++ b/templates/index.html
@@ -32,16 +32,16 @@
             </tr>
             <tr>
                 <td>
-                    <a href="templates/localized_pages/English/index.html"> <img src="static/images/gb_small.png"> </a>
+                    <a href="/en/home"> <img src="static/images/gb_small.png"> </a>
                 </td>
                 <td>
-                    <a href="templates/localized_pages/German/index.html"><img src="static/images/de_small.png"> </a>
+                    <a href="/de/home"><img src="static/images/de_small.png"> </a>
                 </td>
                 <td>
-                    <a href="localized_pages/Bulgarian/index.html"><img src="static/images/bg_small.png"> </a>
+                    <a href="/bg/home"><img src="static/images/bg_small.png"> </a>
                 </td>
                 <td>
-                    <a href="templates/localized_pages/French/index.html"><img src="static/images/fr_small.png"> </a>
+                    <a href="/fr/home"><img src="static/images/fr_small.png"> </a>
                 </td>
             </tr>
         </table>
