En almost rdy, missing final, translation,reg page

--- a/templates/en/adress.html
+++ b/templates/en/adress.html
@@ -1,9 +1,5 @@
-{% extends 'base.html' %}
+{% extends 'en/en_base.html' %}
 
-
-{% block start %}
-<html lang="{{language}}">
-{% endblock %}
 {% block head %}
 <title>GEZ</title>
 {% endblock %}
