--- a/templates/en/general_information.html
+++ b/templates/en/general_information.html
@@ -1,9 +1,5 @@
-{% extends 'base.html' %}
+{% extends 'en/en_base.html' %}
 
-
-{% block start %}
-<html lang="{{language}}">
-{% endblock %}
 {% block head %}
 <title>GEZ</title>
 {% endblock %}
@@ -16,7 +12,6 @@
             <input type="radio" name="gender" id="radioMale">
             <text>Male</text>
             <input type="radio" name="gender" id="radioFemale"> Female
-
             <span>Enter your gender here please</span>
         </li>
         <li>
