--- a/templates/en/final.html
+++ b/templates/en/final.html
@@ -1,8 +1,9 @@
 {% extends 'en/en_base.html' %}
 
 
-{% block head %} 
-        <title> Welcome </title>
+{% block head %}
+<!-- <title> ... </title>-->
+<title> Welcome </title>
 {% endblock %}
 {% block body %}
 <h1>Welcome </h1>
