--- a/templates/base.html
+++ b/templates/base.html
@@ -60,17 +60,18 @@
     -->
     <nav class="Navbar">
         <div class="topnav" id="myTopnav">
-            <a href="#home" class="active">Home</a>
+            <a href="#home" class="active" id="navHome">Home</a>
             <a href="#news">News</a>
             <a href="#contact">Contact</a>
             <div class="dropdown">
-                <button class="dropbtn">Dropdown
+                <button class="dropbtn">Language
                     <i class="fa fa-caret-down"></i>
                 </button>
                 <div class="dropdown-content">
-                    <a href="#">Link 1</a>
-                    <a href="#">Link 2</a>
-                    <a href="#">Link 3</a>
+                    <a href="#">English</a>
+                    <a href="#">German</a>
+                    <a href="#">Bulgarian</a>
+                    <a href="#">French</a>
                 </div>
             </div>
             <a href="#about">About</a>
