--- a/templates/en/general_information.html
+++ b/templates/en/general_information.html
@@ -9,15 +9,14 @@
     <ul>
         <li>
             <label for="">Gender</label>
-            <input type="radio" name="gender" id="radioMale">
-            <text>Male</text>
+            <input type="radio" name="gender" id="radioMale"> Male
             <input type="radio" name="gender" id="radioFemale"> Female
             <span>Enter your gender here please</span>
         </li>
         <li>
             <label for="fName">First Name</label>
             <input type="text" name="firstName" id="fName">
-            <span>Enter your first Name here please</span>
+            <span>Enter your first name here please</span>
         </li>
         <li>
             <label for="lastName">Last Name</label>
