--- a/static/css/form.css
+++ b/static/css/form.css
@@ -128,7 +128,7 @@ input[type="button"]:hover{
 
 /* Add a black background color to the top navigation */
 .topnav {
-    background-color: #333;
+    background-color: #474747;
     overflow: hidden;
   }
   
@@ -136,7 +136,7 @@ input[type="button"]:hover{
   .topnav a {
     float: left;
     display: block;
-    color: #f2f2f2;
+    color: #ffffff;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
@@ -145,7 +145,7 @@ input[type="button"]:hover{
   
   /* Add an active class to highlight the current page */
   .active {
-    background-color: #04AA6D;
+    background-color: #7DBDEA;
     color: white;
   }
   
@@ -165,7 +165,7 @@ input[type="button"]:hover{
     font-size: 17px;
     border: none;
     outline: none;
-    color: white;
+    color: #ffffff;
     padding: 14px 16px;
     background-color: inherit;
     font-family: inherit;
@@ -176,7 +176,7 @@ input[type="button"]:hover{
   .dropdown-content {
     display: none;
     position: absolute;
-    background-color: #f9f9f9;
+    background-color: #474747;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
@@ -185,7 +185,7 @@ input[type="button"]:hover{
   /* Style the links inside the dropdown */
   .dropdown-content a {
     float: none;
-    color: black;
+    color: #ffffff;
     padding: 12px 16px;
     text-decoration: none;
     display: block;
@@ -195,13 +195,13 @@ input[type="button"]:hover{
   /* Add a dark background on topnav links and the dropdown button on hover */
   .topnav a:hover, .dropdown:hover .dropbtn {
     background-color: #555;
-    color: white;
+    color: #ffffff;
   }
   
   /* Add a grey background to dropdown links on hover */
   .dropdown-content a:hover {
-    background-color: #ddd;
-    color: black;
+    background-color: #555;
+    color: #ffffff;
   }
   
   /* Show the dropdown menu when the user moves the mouse over the dropdown button */
@@ -240,4 +240,49 @@ input[type="button"]:hover{
       width: 100%;
       text-align: left;
     }
+}
+
+p {
+  margin: 24px 0;
+  line-height: 2;
+}
+
+.wrapper {
+  padding: 32px;
+}
+
+.cookie-container {
+  position: fixed;
+  bottom: -100%;
+  left: 0;
+  right: 0;
+  background: #474747;
+  color: #ffffff;
+  padding: 0 32px;
+  box-shadow: 0 -2px 16px rgba(47, 54, 64, 0.39);
+
+  transition: 400ms;
+}
+
+.cookie-container.active {
+  bottom: 0;
+}
+
+.cookie-container a {
+  color: #f5f6fa;
+}
+
+.cookie-btn {
+  background-color: #7DBDEA;
+  border: 0;
+  color: #000000;
+  padding: 12px 48px;
+  font-size: 18px;
+  margin-bottom: 16px;
+  border-radius: 8px;
+  cursor: pointer;
+}
+
+.cookie-btn:hover{
+  background-color: #CCECF2;
 }
