--- a/templates/index.html
+++ b/templates/index.html
@@ -1,63 +1,72 @@
 {%extends 'base.html'%}
 
-{% block start %} <html lang="en"> {% endblock %} 
+{% block start %} <html lang="en"> {% endblock %}
 {% block head %}
-    <title>GEZ-Help</title>
+<title>GEZ-Help</title>
 {% endblock %}
 
 {% block body %}
-    <div class="login-menu">
-        <form action="">
-            Login:
-            <label for="uname"> Username: </label>
-            <input type="text" id="uname" name="uname">
-            <label for="passwd">
-                Password:
-            </label>
-            <input type="password" id="passwd" name="passwd">
+
+<form action="">
+    <h1>Login</h1>
+    <ul>
+        <li>
+            <label for="uName">Username</label>
+            <input type="text" name="username" id="uName">
+            <span>Enter your Username here please</span>
+        </li>
+        <li>
+            <label for="pWord">Password</label>
+            <input type="password" name="password" id="pWord">
+            <span>Enter your password here please</span>
+        </li>
+        <li>
             <input type="submit" value="Submit">
-        </form>
+        </li>
+    </ul>
 
-    </div>
-    <h1></h1>
-    <div class="container-flags">
-        <table>
+</form>
 
-            <!-- Different languages  -->
-            <tr>
-                <th>English</th>
-                <th>Deutsch</th>
-                <th>Български</th>
-                <th>Francious</th>
-            </tr>
-            <tr>
-                <td>
-                    <a href="/en/home"> <img src="static/images/gb_small.png"> </a>
-                </td>
-                <td>
-                    <a href="/de/home"><img src="static/images/de_small.png"> </a>
-                </td>
-                <td>
-                    <a href="/bg/home"><img src="static/images/bg_small.png"> </a>
-                </td>
-                <td>
-                    <a href="/fr/home"><img src="static/images/fr_small.png"> </a>
-                </td>
-            </tr>
-        </table>
-    </div>
+</div>
+<h1></h1>
+<div class="container-flags">
+    <table>
 
-    <!-- Cookie html code from here: -->
-    <div class="cookie-container">
-        <p>
-          We use cookies in this website to give you the best experience possible
-          and show you relevant ads. To find out more, read our
-          <a href="templates/localized_pages/English/privacy_policy.html">privacy policy</a>.
-        </p>
-  
-        <button class="cookie-btn">
-          Okay
-        </button>
-      </div>
-      <script type="text/javascript" src="{{url_for('static', filename='javascript/cookieConsent.js')}}"></script>
+        <!-- Different languages  -->
+        <tr>
+            <th>English</th>
+            <th>Deutsch</th>
+            <th>Български</th>
+            <th>Francious</th>
+        </tr>
+        <tr>
+            <td>
+                <a href="/en/home"> <img src="static/images/gb_small.png"> </a>
+            </td>
+            <td>
+                <a href="/de/home"><img src="static/images/de_small.png"> </a>
+            </td>
+            <td>
+                <a href="/bg/home"><img src="static/images/bg_small.png"> </a>
+            </td>
+            <td>
+                <a href="/fr/home"><img src="static/images/fr_small.png"> </a>
+            </td>
+        </tr>
+    </table>
+</div>
+
+<!-- Cookie html code from here: -->
+<div class="cookie-container">
+    <p>
+        We use cookies in this website to give you the best experience possible
+        and show you relevant ads. To find out more, read our
+        <a href="templates/localized_pages/English/privacy_policy.html">privacy policy</a>.
+    </p>
+
+    <button class="cookie-btn">
+        Okay
+    </button>
+</div>
+<script type="text/javascript" src="{{url_for('static', filename='javascript/cookieConsent.js')}}"></script>
 {% endblock %}
