--- a/templates/base.html
+++ b/templates/base.html
@@ -23,59 +23,13 @@
 </head>
 
 <body>
-    <!-- 
-    <nav class="navbar navbar-dark bg-dark">
-        <a class="navbar-brand" href="/">Cool Navbar</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample01"
-            aria-controls="navbarsExample01" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <div class="collapse navbar-collapse" id="navbarsExample01">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/posts">Posts</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link disabled" href="/about"> About</a>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown01" data-toggle="dropdown"
-                        aria-haspopup="true" aria-expanded="false">Contact us</a>
-                    <div class="dropdown-menu" aria-labelledby="dropdown01">
-                        <a class="dropdown-item" href="#">Website</a>
-                        <a class="dropdown-item" href="#">Youtube</a>
-                        <a class="dropdown-item" href="#">Something else here</a>
-                    </div>
-                </li>
-            </ul>
-            <form class="form-inline my-2 my-md-0">
-                <input class="form-control" type="text" placeholder="Search" aria-label="Search">
-            </form>
-        </div>
-    </nav>
-    -->
+    
     <nav class="Navbar">
-        <div class="topnav" id="myTopnav">
-            <a href="#home" class="active" id="navHome">Home</a>
-            <a href="#news">News</a>
-            <a href="#contact">Contact</a>
-            <div class="dropdown">
-                <button class="dropbtn">Language
-                    <i class="fa fa-caret-down"></i>
-                </button>
-                <div class="dropdown-content">
-                    <a href="#">English</a>
-                    <a href="#">German</a>
-                    <a href="#">Bulgarian</a>
-                    <a href="#">French</a>
-                </div>
-            </div>
-            <a href="#about">About</a>
-            <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
+        <div class="firstnavbar" id="myFirstnav">
+            <a href="/en/home"> <img src="static/images/us.png"> </a>
+            <a href="/de/home"><img src="static/images/de.png"> </a>
+            <a href="/bg/home"><img src="static/images/bg.png"> </a>
+            <a href="/fr/home"><img src="static/images/fr.png"> </a>
         </div>
     </nav>
 
