--- a/templates/index.html
+++ b/templates/index.html
@@ -21,40 +21,23 @@
             <span>Enter your password here please</span>
         </li>
         <li>
-            <input type="submit" value="Submit">
+            <ul>
+                <li>
+                    <input type="submit" value="Submit">
+                    <input type="button" value="Use as a Guest">
+                </li>
+            </ul>
+            
+        </li>
+    </ul>
+
+    <ul>
+        <li>
+            <p id="reg">Register to Website</p>
         </li>
     </ul>
 
 </form>
-
-</div>
-<h1></h1>
-<div class="container-flags">
-    <table>
-
-        <!-- Different languages  -->
-        <tr>
-            <th>English</th>
-            <th>Deutsch</th>
-            <th>Български</th>
-            <th>Francious</th>
-        </tr>
-        <tr>
-            <td>
-                <a href="/en/home"> <img src="static/images/gb_small.png"> </a>
-            </td>
-            <td>
-                <a href="/de/home"><img src="static/images/de_small.png"> </a>
-            </td>
-            <td>
-                <a href="/bg/home"><img src="static/images/bg_small.png"> </a>
-            </td>
-            <td>
-                <a href="/fr/home"><img src="static/images/fr_small.png"> </a>
-            </td>
-        </tr>
-    </table>
-</div>
 
 <!-- Cookie html code from here: -->
 <div class="cookie-container">
