--- a/templates/en/general_information.html
+++ b/templates/en/general_information.html
@@ -9,23 +9,23 @@
     <ul>
         <li>
             <label for="">Gender</label>
-            <input type="radio" name="gender" id="radioMale"> Male
+            <input type="radio" name="gender" id="radioMale" required> Male
             <input type="radio" name="gender" id="radioFemale"> Female
             <span>Enter your gender here please</span>
         </li>
         <li>
             <label for="fName">First Name</label>
-            <input type="text" name="firstName" id="fName">
+            <input type="text" name="firstName" id="fName" required>
             <span>Enter your first name here please</span>
         </li>
         <li>
             <label for="lastName">Last Name</label>
-            <input type="text" name="lastName" id="lName">
+            <input type="text" name="lastName" id="lName" required>
             <span>Enter your last name here please</span>
         </li>
         <li>
             <label for="dateOfBirth">Date of Birth</label>
-            <input type="date" name="dateOfBirth" id="dob">
+            <input type="date" name="dateOfBirth" id="dob" required>
             <span>Enter your date of birth here please</span>
         </li>
         <li>
