add register page

--- a/templates/index.html
+++ b/templates/index.html
@@ -33,7 +33,10 @@
 
     <ul>
         <li>
-            <p id="reg">Register to Website</p>
+            <a href="/register">
+                <p id="reg">Register</p>
+            </a>
+            
         </li>
     </ul>
 
