--- a/static/css/form.css
+++ b/static/css/form.css
@@ -25,6 +25,15 @@ h1{
     font-size:x-large;
 }
 
+h2{
+  display: block;
+    text-align: center;
+    padding: 0;
+    margin: 0px 0px 20px 0px;
+    color: #000000;
+    font-size:larger;
+}
+
 ul{
     list-style:none;
     padding:0;
