--- a/templates/emtpy_page.html
+++ b/templates/emtpy_page.html
@@ -2,7 +2,7 @@
 
 
 {% block start %} 
-<html lang="{{language}}">-->
+<html lang="{{language}}">
 {% endblock %}
 {% block head %} 
 <!-- <title> ... </title>-->
