--- a/templates/en/payment_methods.html
+++ b/templates/en/payment_methods.html
@@ -5,60 +5,33 @@
 {% endblock %}
 {% block body %}
 
-<body>
-    <div class="pers-fields">
-        <form action="/{{language}}/gez/payment_methods" method="POST">
-            <table>
-                <h2>4. Angaben zur Zahlungsweise</h2>
-                <tr>
-                    <th>Feld:</th>
-                    <th>Kurze Erklärung</th>
-                </tr>
-                <tr>
-                    <!-- Radio button for payment timespan -->
-                    <td class="formular-fields">
-                        Gesetzliche Zahlung:
-                        <label for="3-months"> In der mitte eines 3 Monats Zeitraums(zum 15)</label>
-                        <input type="radio" id="3-months" name="3-months" value="1" required><br>
-                        Vorauszahlung:
-                        <label for="3-months-before">3 Monate im Voraus(1.1, 1.4, 1.7, 1.10) </label>
-                        <input type="radio" id="3-months-before" name="3-months-before" value="2"><br>
-                        <label for="6-months-before">6 Monate im Voraus(1.1, 1.7) </label>
-                        <input type="radio" id="6-months-before" name="6-months-before" value="3"><br>
-                        <label for="12-months-before">12 Monate im Voraus(1.1) </label>
-                        <input type="radio" id="12-months-before" name="12-months-before" value="4"><br>
-                    </td>
-                    <td class="info-fields">
-                        <div class="info-button">
-                            <img src="/images/favicon.png" alt="informationen">
-                            <span class="extra-info">
-                                Weitere Informationen werden noch hinzugefügt
-                            </span>
-                        </div>
-                    </td>
-                </tr>
-                <tr>
-                    <td class="formular-fields">
-                        <label for="sepa">Durch SEPA-Lastschrift Mandat</label>
-                        <input type="radio" id="sepa" name="sepa" value="1" required><br>
-                        <label for="bank_transfer">Durch Überweisung</label>
-                        <input type="radio" id="bank_transfer" name="bank_transfer" value="2"><br>
-                    </td>
-                    <td class="info-fields">
-                        <div class="info-button">
-                            <img src="/images/favicon.png" alt="informationen">
-                            <span class="extra-info">
-                                Weitere Informationen werden noch hinzugefügt
-                            </span>
-                        </div>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <input type="submit" value="Submit">
-                    </td>
-                </tr>
-            </table>
-        </form>
-    </div>
-    {% endblock %}
+<div class="pers-fields">
+    <form action="/{{language}}/gez/payment_methods" method="POST">
+        <h1>Types of payment</h1>
+        <ul>
+            <li>
+                <label for=""> Timespan </label>
+                <input type="radio" id="3-months" name="timespan" value="1" required>In the middle of the Frist 3 months(at the 15th)
+                <input type="radio" id="3-months-before" name="timespan" value="2">3 Months prepaid:(1.1, 1.4, 1.7, 1.10)
+                <input type="radio" id="6-months-before" name="timespan" value="3">6 Months prepaid:(1.1, 1.7)
+                <input type="radio" id="12-months-before" name="timespan" value="4">12 Months prepaid(1.1)
+                <span>
+                    Please chose the timespan in which you want to pay the fee.
+                </span>
+            </li>
+            <li>
+                <label for="">Type of Transfer</label>
+                <input type="radio" id="sepa" name="type" value="1" required> Through Sepa mandate 
+                <input type="radio" id="bank_transfer" name="type" value="2"> Through Bank transfer
+                <span>
+                    Please chose how you would like to pay the fee, you can either give SEPA the right to withdraw money from your acount or do a bank transfer on your own.
+                </span>
+            </li>
+            <li>
+
+                <input type="submit" value="Submit">
+            </li>
+        </ul>
+    </form>
+</div>
+{% endblock %}
