--- a/templates/register.html
+++ b/templates/register.html
@@ -55,10 +55,10 @@
         </li>
         <li>
             <label for="">Language</label>
-            <input type="radio" name="language" id="en"> English
-            <input type="radio" name="language" id="de"> German
-            <input type="radio" name="language" id="bg"> Bulgarian
-            <input type="radio" name="language" id="fr"> French
+            <input type="radio" name="language" id="l1" value="en"> English
+            <input type="radio" name="language" id="l2" value="de"> German
+            <input type="radio" name="language" id="l3" value="bg"> Bulgarian
+            <input type="radio" name="language" id="l4" value="fr"> French
             <span>Choose the language you'd like to use</span>
         </li>
         <li>
