--- a/templates/en/final.html
+++ b/templates/en/final.html
@@ -3,13 +3,16 @@
 
 {% block head %}
 <!-- <title> ... </title>-->
-<title> Welcome </title>
+<title> Last steps </title>
 {% endblock %}
 {% block body %}
 <h1>Welcome </h1>
 <hr>
-<h2> Please chose the document, that you need help with: </h2>
-<p><a href="/en/gez/general_information">Radio Contribution Fee</a></p>
-<p><a href=""> Bank</a></p>
-<p><a href=""> Kindergarden</a></p>
+<h2> Please remember that we still need your signature and the date as validation! This is where you have to sign in! <img src="/images/Part_3.png" class="image">
+    <br> <br> Moreover if you have chosen to pay with a debit note, you have to fill out the last part of the doucument </h2>
+    
+<p>If you need any kind of additional help, please do not hestitate to reach out the helpline <a href="https://www.mannheim.de/de/service-bieten/integration-migration/anima-ankommen-in-mannheim"></a>ANIMA </a></p>
+<p>
+    If you would like to fill out any other document, please click <a href="">here</a>.
+</p>
 {% endblock %}
