more design changes

--- a/templates/en/sepa.html
+++ b/templates/en/sepa.html
@@ -14,37 +14,37 @@
             <span>Enter your full name in the following order: title, last name, first name</span>
         </li>
         <li>
-            <label for="street">Street:</label>
+            <label for="street">Street</label>
             <input type="text" id="street" name="street" required>
             <span>Enter the Streetname of your home here please</span>
         </li>
         <li>
-            <label for="home_nr">Streetnumber:</label>
+            <label for="home_nr">Streetnumber</label>
             <input type="text" id="street_nr" name="street_nr" required>
             <span>Enter the streetnumber of your home here please</span>
         </li>
         <li>
-            <label for="ZIP_code">ZIP:</label>
+            <label for="ZIP_code">ZIP</label>
             <input type="number" id="ZIP_code" name="ZIP_code" required>
             <span>Enter the ZIP-code of your adress here please</span>
         </li>
         <li>
-            <label for="area">City:</label>
+            <label for="area">City</label>
             <input type="text" id="area" name="area" required>
             <span>Enter the City of your home here please</span>
         </li>
         <li>
-            <label for="IBAN">IBAN:</label>
+            <label for="IBAN">IBAN</label>
             <input type="text" id="IBAN" name="IBAN" required>
             <span>Enter the IBAN of your bank account here please.</span>
         </li>
         <li>
-            <label for="BIC">BIC:</label>
+            <label for="BIC">BIC</label>
             <input type="text" id="BIC" name="BIC" required>
             <span>Enter the BIC of your bank account here please.</span>
         </li>
         <li>
-            <label for="credit_institution">Credit institution:</label>
+            <label for="credit_institution">Credit institution</label>
                     <input type="text" id="credit_institution" name="credit_institution" required>
             <span>Enter the name of your credit credit institution here please.</span>
         </li>
