--- a/templates/register.html
+++ b/templates/register.html
@@ -6,7 +6,7 @@
 {% endblock %}
 {% block head %}
 <!-- <title> ... </title>-->
-<title>GEZ</title>
+<title>Registration</title>
 {% endblock %}
 {% block body %}
 <form action="/register" method="POST">
