--- a/static/css/form.css
+++ b/static/css/form.css
@@ -78,6 +78,7 @@ input[type="time"],
 input[type="url"],
 input[type="password"],
 input[type="date"],
+input[type="tel"],
 textarea,
 select 
 {
@@ -97,6 +98,7 @@ select
 }
 
 input[type="radio"]{
+    display: inline-block;
     box-sizing: border-box;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
@@ -104,6 +106,10 @@ input[type="radio"]{
     border: none;
     background: #FDFDFD;
     font-family: Arial, Helvetica, sans-serif;
+}
+
+li > ul > li{
+  display: inline-block;
 }
 
 li > span{
