--- a/templates/en/en_base.html
+++ b/templates/en/en_base.html
@@ -28,20 +28,20 @@
     <nav class="Navbar">
         <div class="topnav" id="myTopnav">
             <a href="/en/home" class="active">Home</a>
-            <a href="#news">News</a>
-            <a href="#contact">Contact</a>
+            <a href="">Dokumente</a>
             <div class="dropdown">
                 <button class="dropbtn">Languages
                     <i class="fa fa-caret-down"></i>
                 </button>
                 <div class="dropdown-content">
-                    <a href="#">English</a>
-                    <a href="#">German</a>
-                    <a href="#">Bulgarian</a>
-                    <a href="#">French</a>
+                    <a href="">English</a>
+                    <a href="">German</a>
+                    <a href="">Bulgarian</a>
+                    <a href="">French</a>
                 </div>
             </div>
             <a href="/en/about">About</a>
+            <a href="">Logout</a>
             <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
         </div>
     </nav>
