--- a/templates/en/home.html
+++ b/templates/en/home.html
@@ -8,7 +8,7 @@
 <h1>Welcome </h1>
 <hr>
 <h2> Please chose the document, that you need help with: </h2>
-<p><a href="/en/gez/general_information">Radio Contribution Fee</a></p>
-<p><a href=""> Bank</a></p>
-<p><a href=""> Kindergarden</a></p>
+<p><a href="">Appartement registration</a></p>
+<p><a href="/en/gez/general_information"> GEZ</a></p>
+<p><a href="">Child care</a></p>
 {% endblock %}
