--- a/templates/en/en_base.html
+++ b/templates/en/en_base.html
@@ -28,7 +28,7 @@
     <nav class="Navbar">
         <div class="topnav" id="myTopnav">
             <a href="/en/home" class="active">Home</a>
-            <a href="">Dokumente</a>
+            <a href="">Documents</a>
             <div class="dropdown">
                 <button class="dropbtn">Languages
                     <i class="fa fa-caret-down"></i>
