--- a/templates/en/final.html
+++ b/templates/en/final.html
@@ -9,10 +9,10 @@
 <h1>Welcome </h1>
 <hr>
 <h2> Please remember that we still need your signature and the date as validation! This is where you have to sign in! <img src="/images/Part_3.png" class="image">
-    <br> <br> Moreover if you have chosen to pay with a debit note, you have to fill out the last part of the doucument </h2>
+    <br> <br> Moreover if you have chosen to pay with a SEPA mandate, you have to fill out the last part of the doucument. </h2>
     
 <p>If you need any kind of additional help, please do not hestitate to reach out the helpline <a href="https://www.mannheim.de/de/service-bieten/integration-migration/anima-ankommen-in-mannheim"></a>ANIMA </a></p>
 <p>
-    If you would like to fill out any other document, please click <a href="">here</a>.
+    If you would like to fill out any other document, please click <a href="/en/gez/home">here</a>.
 </p>
 {% endblock %}
