--- a/static/css/form.css
+++ b/static/css/form.css
@@ -4,6 +4,7 @@ body {
     background-attachment: fixed;
     background-position: center;
     background-size: 100%;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 form{
