--- a/templates/en/home.html
+++ b/templates/en/home.html
@@ -7,7 +7,7 @@
 {% block body %}
 <h1>Welcome </h1>
 <hr>
-<h2> Please chose the document, that you need help with: </h2>
+<h2> Please choose the document, that you need help with: </h2>
 <ul>
         <li>
                 <a href="">Appartement registration</a>
