--- a/templates/en/final.html
+++ b/templates/en/final.html
@@ -8,7 +8,10 @@
 {% block body %}
 <h1>Welcome </h1>
 <hr>
-<h2> Please remember that we still need your signature and the date as validation! This is where you have to sign in! <img src="/images/Part_3.png" class="image">
+<h2> Please remember that we still need your signature and the date as validation! This is where you have to sign in! <details>
+    <summary>This is how it looks like!</summary>
+    <img src="/images/Part_3.png" class="image">
+    </details>
     <br> </h2>
     
 <p>If you need any kind of additional help, please do not hestitate to reach out the helpline <a href="https://www.mannheim.de/de/service-bieten/integration-migration/anima-ankommen-in-mannheim"></a>ANIMA </a></p>
