--- a/templates/en/sepa.html
+++ b/templates/en/sepa.html
@@ -11,44 +11,77 @@
         <li>
             <label for="name">Name</label>
             <input type="text" name="fullName" id="name" required>
-            <span>Enter your full name in the following order: title, last name, first name</span>
-        </li>
+            <span><details>
+                <summary>
+                    Help?
+                </summary>Enter your full name in the following order: title, last name, first name</span>
+            </details>
+            </li>
         <li>
             <label for="street">Street:</label>
             <input type="text" id="street" name="street" required>
-            <span>Enter the Streetname of your home here please</span>
+            <span><details>
+                <summary>
+                    Help?
+                </summary>Enter the Streetname of your home here please.
+            </details> </span>
         </li>
         <li>
             <label for="home_nr">Streetnumber:</label>
             <input type="text" id="street_nr" name="street_nr" required>
-            <span>Enter the streetnumber of your home here please</span>
+            <span><details>
+                <summary>
+                    Help?
+                </summary>Enter the streetnumber of your home here please
+                </details></span>
         </li>
         <li>
             <label for="ZIP_code">ZIP:</label>
             <input type="number" id="ZIP_code" name="ZIP_code" required>
-            <span>Enter the ZIP-code of your adress here please</span>
+            <span><details>
+                <summary>
+                    Help?
+                </summary>Enter the ZIP-code of your adress here please.
+            </details> </span>
         </li>
         <li>
             <label for="area">City:</label>
             <input type="text" id="area" name="area" required>
-            <span>Enter the City of your home here please</span>
+            <span><details>
+                <summary>
+                    Help?
+                </summary>Enter the City of your home here please.
+                </details> </span>
         </li>
         <li>
             <label for="IBAN">IBAN:</label>
             <input type="text" id="IBAN" name="IBAN" required>
-            <span>Enter the IBAN of your bank account here please.</span>
+            <span><details>
+                <summary>
+                    Help?
+                </summary>Enter the IBAN of your bank account here please.
+            </details> </span>
         </li>
         <li>
             <label for="BIC">BIC:</label>
             <input type="text" id="BIC" name="BIC" required>
-            <span>Enter the BIC of your bank account here please.</span>
+            <span><details>
+                <summary>
+                    Help?
+                </summary>Enter the BIC of your bank account here please.
+            </details></span>
         </li>
         <li>
             <label for="credit_institution">Credit institution:</label>
                     <input type="text" id="credit_institution" name="credit_institution" required>
-            <span>Enter the name of your credit credit institution here please.</span>
+            <span><details>
+                <summary>
+                    Help?
+                </summary>Enter the name of your credit credit institution here please.
+            </details></span>
         </li>
         <li>
+            <input type="button" value="Back" onClick="javascript:history.back()">
             <input type="submit" value="Submit">
         </li>
     </ul>
