Added branching into final and sepa

--- a/templates/en/payment_methods.html
+++ b/templates/en/payment_methods.html
@@ -11,10 +11,10 @@
         <ul>
             <li>
                 <label for=""> Timespan </label>
-                <input type="radio" id="3-months" name="timespan" value="1" required>In the middle of the Frist 3 months(at the 15th) <br>
-                <input type="radio" id="3-months-before" name="timespan" value="2">3 Months prepaid:(1.1, 1.4, 1.7, 1.10) <br>
-                <input type="radio" id="6-months-before" name="timespan" value="3">6 Months prepaid:(1.1, 1.7) <br>
-                <input type="radio" id="12-months-before" name="timespan" value="4">12 Months prepaid(1.1)
+                <input type="radio" id="3-months" name="timespan" value="3-mid" required>In the middle of the Frist 3 months(at the 15th) <br>
+                <input type="radio" id="3-months-before" name="timespan" value="3-pre">3 Months prepaid:(1.1, 1.4, 1.7, 1.10) <br>
+                <input type="radio" id="6-months-before" name="timespan" value="6-pre">6 Months prepaid:(1.1, 1.7) <br>
+                <input type="radio" id="12-months-before" name="timespan" value="12-pre">12 Months prepaid(1.1)
                 <span><details>
                     <summary>
                         Help?
@@ -25,8 +25,8 @@
             </li>
             <li>
                 <label for="">Type of Transfer</label>
-                <input type="radio" id="sepa" name="type" value="1" required> Through Sepa mandate <br>
-                <input type="radio" id="bank_transfer" name="type" value="2"> Through Bank transfer
+                <input type="radio" id="sepa" name="type" value="sepa" required> Through Sepa mandate <br>
+                <input type="radio" id="bank_transfer" name="type" value="bank"> Through Bank transfer
                 <span><details>
                     <summary>
                         Help?
