--- a/templates/de/de_base.html
+++ b/templates/de/de_base.html
@@ -1,8 +1,9 @@
+
 <!DOCTYPE html>
 <!---->
 <!-- A html tag with the necessary language for the page-->
 <!-- <html lang="bg/en/de/fr">-->
-<html lang="en">
+<html lang="de">
 
 <head>
     <meta charset="UTF-8">
@@ -27,10 +28,10 @@
 
     <nav class="Navbar">
         <div class="topnav" id="myTopnav">
-            <a href="/en/home" class="active">Home</a>
-            <a href="">Documents</a>
+            <a href="/de/home" class="active">Home</a>
+            <a href="">Documente</a>
             <div class="dropdown">
-                <button class="dropbtn">Languages
+                <button class="dropbtn">Sprache
                     <i class="fa fa-caret-down"></i>
                 </button>
                 <div class="dropdown-content">
@@ -40,7 +41,7 @@
                     <a href="">French</a>
                 </div>
             </div>
-            <a href="/en/about">About</a>
+            <a href="/de/about">About</a>
             <a href="">Logout</a>
             <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
         </div>
