--- a/templates/en/en_base.html
+++ b/templates/en/en_base.html
@@ -36,8 +36,8 @@
                 <div class="dropdown-content">
                     <a href="?lang=en">English</a>
                     <a href="?lang=de">German</a>
-                    <a href="">Bulgarian</a>
-                    <a href="">French</a>
+                    <a href="?lang=bg">Bulgarian</a>
+                    <a href="?lang=fr">French</a>
                 </div>
             </div>
             <a href="/en/about">About</a>
