updated welcome, register sites

--- a/templates/en/register.html
+++ b/templates/en/register.html
@@ -1,8 +1,12 @@
 {% extends 'en/en_base.html' %}
 
+
+{% block start %}
+<html lang="en">
+{% endblock %}
 {% block head %}
 <!-- <title> ... </title>-->
-<title>Registration</title>
+<title>GEZ</title>
 {% endblock %}
 {% block body %}
 <form action="/register" method="POST">
